# deep_learning

./: CMakeLists.txt  SConstruct  compile.sh  conv_compile.sh  convolutional_neural_network.py  fcnn_compile.sh  fcnn_flagfile_configure  fcnn_mnist  fcnn_mnist_flagfile_configure  full_connected_neural_network.py  mnist.py  mnist_compile.sh  oop_mnist.py  perceptron.py  perceptron1.py  stochastic_gradient_descent.py  test_cnn.cpp  test_fcnn.cpp  test_fcnn_mnist.cpp  vector_program_mnist.py  vectorization_programming_fcnn.py
conf/: cnn_flagfile_configure  fcnn_flagfile_configure  fcnn_mnist_flagfile_configure
demo/: compile.sh  test_fcnn.cpp
include/: convolutional_layer.h  filter.h  full_connected_layer.h  max_pooling_layer.h  neural_network.h
include/utility/: full_connected_layer.h  matrix.hpp  matrix_math_function.hpp  neural_network.h  normalizer.hpp  singleton.hpp
src/: convolutional_layer.cpp  filter.cpp  full_connected_layer.cpp  max_pooling_layer.cpp  neural_network.cpp
utility/: full_connected_layer.h  matrix_math_function.hpp  neural_network.h  normalizer.hpp
